[package]
name = "discourse_forum_bot"
version = "0.1.0"
authors = ["Anton Davydov <fetsorn@gmail.com>"]
edition = "2018"

[dependencies]
console = "0.14.1"
derive_more = "0.99.16"
futures = "0.3.17"
html2text = "0.2.1"
log = "0.4.6"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
substring = "1.4.5"
teloxide = { version = "0.5.2", features = ["macros", "auto-send"] }
thiserror = "1.0.25"
tokio = { version =  "1.11", features = ["rt-multi-thread", "macros"] }
